improve  email process and ui dialog and runned npm run format for proper indentation and removed all unnecessary console.log and comments